--- a/style.css
+++ b/style.css
@@ -1,24 +1,85 @@
+body {
+    background-image:url(images/light\ pink.jpg) ;
+}
 .topbar {
     background-color: teal;
-    height: 43px;
+    height: 50px;
     width: 100%;
     text-align: center;
     font-size: 25px;
+    border: dotted 4px white;
+    
 }
 .link {
     cursor: grabbing;
     color: white;
+    display: inline;
+    padding-right: 30px;
 }
+
 h1 {
-    text-align: center;
-}
-.container {
     display: flex;
-    flex-direction:row;
-    justify-content: center;
+   align-items: center;
+   justify-content: center;
+    background: -webkit-linear-gradient(rgb(212, 140, 5), rgb(41, 23, 3));
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    height: 80px;
 }
-.container img {
-    width: 200px;
-    height: 160px;
-    border: pink 5px groove;
+
+.row {
+    display: flex;
+    align-items: center;
+  
 }
+.col-md-4 img {
+    width: 280px;
+    height: 230px;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+   
+   
+}
+.col-md-8 img{
+    width: 100%;
+    height: 230px;
+    
+}
+.row-one {
+    border: rgb(80, 44, 11) 5px dotted;
+    display: flex;
+    align-items: center;
+    transition-duration: 2s;  
+    
+}
+p {
+   text-align: center;
+    color: rgba(54, 39, 11, 0.89);
+    font-weight: 400;
+    background-color: rgb(255, 248, 252);
+    transition-duration: 3s;
+}
+.animate__animated.animate__bounce {
+    --animate-duration: 3s;
+  }
+  .animate__animated.animate__backInLeft {
+    --animate-duration: 2s;
+  }
+  .animate__animated.animate__fadeInRight {
+    --animate-duration: 2s;
+  }
+  .animate__animated.animate__zoomInUp {
+    --animate-duration: 2s;
+  }
+  .scale:hover {
+    transform: scale(130%);
+    cursor: pointer;
+}
+.skew:hover {
+    transform: skew(20deg);
+    cursor: pointer;
+}
+.animate__animated.animate__rubberBand {
+    --animate-duration: 2s;
+  }
