--- a/style.css
+++ b/style.css
@@ -83,3 +83,31 @@ p {
 .animate__animated.animate__rubberBand {
     --animate-duration: 2s;
   }
+
+  .dropbtn {
+    background-color:pink;
+    color: white;
+    padding: 16px;
+    font-size: 23px;
+    border: none;
+    box-shadow: 0px 8px 16px 0px purple;
+  }
+  .dropdown {
+    position: relative;
+    display: inline-block;
+  }
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f1f1f1;
+    min-width: 160px;
+  }
+  .dropdown-content a {
+    color: purple;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+  }
+  .dropdown-content a:hover {background-color:lightskyblue;}
+  .dropdown:hover .dropdown-content {display: block;}
+  .dropdown:hover .dropbtn {background-color:hotpink;}
